--- a/Report/XMLReport.xml
+++ b/Report/XMLReport.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<testsuite failures="0" name="cucumber.runtime.formatter.JUnitFormatter" skipped="0" tests="1" time="18.100963">
-<testcase classname="Checking Login functionality of the application" name="Checking Login functionality with the valid login credentials" time="18.100963">
+<testsuite failures="0" name="cucumber.runtime.formatter.JUnitFormatter" skipped="0" tests="2" time="24.054841">
+<testcase classname="Check the ForgetPassword functionality of the application" name="Checking the ForgetPassword functionality click on the link" time="10.686763">
+<system-out><![CDATA[Given user is on Login page.................................................passed
+When user clicks on the forget password link................................passed
+Then user is redirecting to the ForgetPassword page.........................passed
+]]></system-out>
+</testcase>
+<testcase classname="Checking Login functionality of the application" name="Checking Login functionality with the valid login credentials" time="13.368078">
 <system-out><![CDATA[Given user is on Login page.................................................passed
 When user enters username in the username textfield.........................passed
 When user enters password in the password textfield.........................passed
